--- a/ROIMemberLoot.css
+++ b/ROIMemberLoot.css
@@ -91,8 +91,9 @@
 
 /* Tier selection combo box - change it to black font */
 #tierFilter {
-	width: 50px;
+	width: 75px;
 	color: rgb(0, 0, 0);
+	background-color: rgb(255, 255, 255);
 }
 
 #tierFilter * {
@@ -106,6 +107,7 @@
 
 #ROIMemberSelect {
 	color: rgb(0, 0, 0);
+	background-color: rgb(255, 255, 255);
 }
 
 #ROIMemberSelect * {
