- Addition of Attendance on the page - Username check will be case insensitive. This will make it less cumbersome to add new people - A better error message will be displayed if you don't have access - Changing the tier selection to multiselect so you can see loot across multiple tiers - The loot summary section with the totals will display based on the tiers you have selected (That's how we view loot anyways not overall totals) - Last loot date will function based on your tiers selected - Alts/rot counts will function based on your tiers selected - Will add in an Alt last loot date based on tiers selected - Whatever visual improvements I see fit (I'm not that great with styling/UI though) - May add in visible/non-visible/weapon totals based on tier selection

--- a/ROIMemberLoot.css
+++ b/ROIMemberLoot.css
@@ -63,7 +63,7 @@
 }
 
 /* Define the borders for the loot table */
-.ROILootTable td,.ROILootTable th {
+.ROILootTable td, .ROILootTable th {
 	border: 1px solid #61708E;
 	padding-right: 10px;
 }
@@ -89,9 +89,26 @@
 	background-color: rgb(48, 48, 48);
 }
 
+/* Generic error formatting */
+.ROIError {
+	color: red;
+}
+
+/* Formatting for the Attendance span */
+.ROIAttendance {
+	display: inline;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+.ROIAttendance div {
+	display: inline;
+	padding-right: 25px;
+}
+
 /* Tier selection combo box - change it to black font */
 #tierFilter {
-	width: 75px;
+	width: 100px;
 	color: rgb(0, 0, 0);
 	background-color: rgb(255, 255, 255);
 }
